@@ -1,0 +1,8 @@
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  </head>
+  <body>
+    😄
+  </body>
+</html>
